examples/hello-cheapk8s-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-cip
  labels:
    app: hello
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5080
    targetPort: 5000
    protocol: TCP
  selector:
    app: hello
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-lb
  labels:
    app: hello
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 5080
    targetPort: 5000
    protocol: TCP
  selector:
    app: hello
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-np
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-svc-np.cloud.holisticsecurity.io
  labels:
    app: hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 5080
    targetPort: 5000
    protocol: TCP
  selector:
    app: hello
---
