examples/kuard.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-svc-np
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kuard.cloud.holisticsecurity.io
  namespace: kuard
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30001  ## Port required to create a SSH tunnel
  #- name: https
  #  port: 443
  #  targetPort: 443
  #  protocol: TCP
  selector:
    app: kuard
---
