examples/weave-scope-app-svc-np.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weave-scope-app-svc-np
  labels:
    app: weave-scope
    name: weave-scope-app
    weave-cloud-component: scope
    weave-scope-component: app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: weave-scope.cloud.holisticsecurity.io
  namespace: weave
spec:
  type: NodePort
  ports:
  - name: app
    port: 80         ## Port required to route traffic from NGINX Ingress
    protocol: TCP
    targetPort: 4040
    nodePort: 30002  ## Port required to create a SSH tunnel
  selector:
    app: weave-scope
    name: weave-scope-app
    weave-cloud-component: scope
    weave-scope-component: app
---
