examples/kuard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-issuer-test"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: secret-http-basic-auth
  namespace: kuard
spec:
  rules:
  - host: ingress-nginx.cloud.holisticsecurity.io
    http:
      paths:
      - path: /kuard  ## URL: <ingress>/kuard
        backend:
          serviceName: kuard
          servicePort: 90
  tls:
  - hosts:
    - ingress-nginx.cloud.holisticsecurity.io
    secretName: secret-tls 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-ingress-svc-np
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-issuer-test"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: secret-http-basic-auth
  namespace: kuard
spec:
  rules:
  - host: kuard.cloud.holisticsecurity.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard-svc-np
          servicePort: 91
  tls:
  - hosts:
    - kuard.cloud.holisticsecurity.io
    secretName: secret-tls-svc-np 
---
