examples/weave-scope-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-scope-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"  # 
    certmanager.k8s.io/issuer: "letsencrypt-prod" # Selecting the issuer CA
    certmanager.k8s.io/acme-challenge-type: http01
    ingress.kubernetes.io/auth-type: basic  # Enabling http-basic auth
    ingress.kubernetes.io/auth-secret: weave-scope-secret-basic-auth  # NGINX will read this secret for http-basic auth
  namespace: weave
spec:
  rules:
  - host: weave-scope.cloud.holisticsecurity.io
      http:
        paths:
        - path: /
          backend:
            serviceName: weave-scope-app  # Weave Scope ClusterIP service created by default during the installation
            servicePort: 80
  tls:
  - hosts:
    - weave-scope.cloud.holisticsecurity.io  # This host (fqdn) is going to get a tls cert
    secretName: weave-scope-secret-tls-cert # Cert-Manager will store the created tls cert in this k8s secret
